# AlgorithmsGroupProject

./: CMakeLists.txt  Complex.h  ComplexMatrix.h  Errors.h  LU.h  LinearRegression.h  New File.h  README.md  dconfig  main.cpp
Cpp/: main.cpp
Headers/: Benchmarks.h  Complex.h  ComplexMatrix.h  Errors.h  LinearRegression.h
Unit tests/: Test Linear Regression.cpp  Test getInverseGaussJordan.cpp
docs/: _benchmarks_8h.html  _benchmarks_8h_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _complex_8h.html  _complex_8h_source.html  _complex_matrix_8h.html  _complex_matrix_8h_source.html  _errors_8h.html  _errors_8h_source.html  _linear_regression_8h.html  _linear_regression_8h_source.html  _r_e_a_d_m_e_8md.html  _test_01_linear_01_regression_8cpp.html  _test_01_linear_01_regression_8cpp_source.html  _test_01_strassen_01_algorithm_8cpp.html  _test_01_strassen_01_algorithm_8cpp_source.html  _test_01get_inverse_gauss_jordan_8cpp.html  _test_01get_inverse_gauss_jordan_8cpp_source.html  _test_01get_inverse_l_u_8cpp.html  _test_01get_inverse_l_u_8cpp_source.html  _test___linear___regression_8cpp_8o_8d.html  _test___linear___regression_8cpp_8o_8d_source.html  _test___strassen___algorithm_8cpp_8o_8d.html  _test___strassen___algorithm_8cpp_8o_8d_source.html  _test__get_inverse_gauss_jordan_8cpp_8o_8d.html  _test__get_inverse_gauss_jordan_8cpp_8o_8d_source.html  _test__get_inverse_l_u_8cpp_8o_8d.html  _test__get_inverse_l_u_8cpp_8o_8d_source.html  annotated.html  (+238 more)
(+53 files in other folders)
